--- a/.github/workflows/main_restaurant-table-booking-app-api.yml
+++ b/.github/workflows/main_restaurant-table-booking-app-api.yml
@@ -13,6 +13,10 @@ jobs:
   build:
     runs-on: windows-latest
 
+    defaults:
+      run:
+        working-directory: API/RestaurantTableBookingApp.API
+
     steps:
       - uses: actions/checkout@v4
 
@@ -23,7 +27,7 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: cd API/RestaurantTableBookingApp.API && dotnet build --configuration Release
+        run: dotnet build --configuration Release
 
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
