--- a/API/RestaurantTableBookingApp.Service/RestaurantTableBookingApp.Service.csproj
+++ b/API/RestaurantTableBookingApp.Service/RestaurantTableBookingApp.Service.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SendGrid" Version="9.29.3" />
+    <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RestaurantTableBookingApp.Core\RestaurantTableBookingApp.Core.csproj" />
     <ProjectReference Include="..\RestaurantTableBookingApp.Data\RestaurantTableBookingApp.Data.csproj" />
   </ItemGroup>
