--- a/API/RestaurantTableBookingAppAPI/RestaurantTableBookingApp.API.csproj
+++ b/API/RestaurantTableBookingAppAPI/RestaurantTableBookingApp.API.csproj
@@ -15,6 +15,8 @@
     </PackageReference>
     <PackageReference Include="Microsoft.Extensions.Logging.AzureAppServices" Version="8.0.6" />
     <PackageReference Include="Microsoft.Identity.Web" Version="2.19.0" />
+    <PackageReference Include="SendGrid" Version="9.29.3" />
+    <PackageReference Include="SendGrid.Extensions.DependencyInjection" Version="1.0.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="8.0.1" />
     <PackageReference Include="Serilog.Sinks.ApplicationInsights" Version="4.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
