--- a/API/RestaurantTableBookingAppAPI/appsettings.json
+++ b/API/RestaurantTableBookingAppAPI/appsettings.json
@@ -3,7 +3,58 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Information"
+      }
     }
   },
-  "AllowedHosts": "*"
+  "SendGrid": {
+    "From": "",
+    "SENDGRID_API_KEY": ""
+  },
+  "AzureAdB2C": {
+    "Instance": "",
+    "ClientId": "",
+    "Domain": "",
+    "SignUpSignInPolicyId": "",
+    "Scopes": {
+      "Read": ["", ""],
+      "Write": [""]
+    }
+  },
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "ConnctionString": ""
+  },
+  "Serilog": {
+    "Using": ["Serilog.Sinks.ApplicationInsights"],
+    "MinimumLevel": {
+      "Default": "Information",
+      "Override": {
+        "Microsoft": "Information",
+        "System": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "ApplicationInsights",
+        "Args": {
+          "connectionString": "",
+          "telemetryConverter": ""
+        }
+      }
+    ],
+    "Enrich": [
+      "FromLogContext",
+      "WithMachineName",
+      "WithThreadId",
+      "WithThreadName",
+      "WithEventType"
+    ],
+    "Properties": {
+      "Application": "Restaurant Table Booking WEB API"
+    }
+  }
 }
