--- a/API/RestaurantTableBookingAppAPI/appsettings.Production.json
+++ b/API/RestaurantTableBookingAppAPI/appsettings.Production.json
@@ -7,5 +7,19 @@
   },
   "ConnectionStrings": {
     "DbContext": ""
+  },
+  "AzureAdB2C": {
+    "Instance": "",
+    "ClientId": "",
+    "Domain": "",
+    "SignUpSignInPolicyId": "",
+    "Scopes": {
+      "Read": [ "Booking.Read", "Booking.Write" ],
+      "Write": [ "Booking.Write" ]
+    }
+  },
+  "SendGrid": {
+    "From": "",
+    "SENDGRID_API_KEY": ""
   }
 }
