Initializing Migrations and Scripts folders

--- a/API/RestaurantTableBookingApp.Data/RestaurantTableBookingApp.Data.csproj
+++ b/API/RestaurantTableBookingApp.Data/RestaurantTableBookingApp.Data.csproj
@@ -20,4 +20,9 @@
     <ProjectReference Include="..\RestaurantTableBookingApp.Core\RestaurantTableBookingApp.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="Scripts\" />
+  </ItemGroup>
+
 </Project>
